# rag-youtube

./: .env.example  .gitignore  .vercelignore  Procfile  README.md  docker-compose.yml  init.sql  main.py  package.json  pyproject.toml  requirements.txt  setup.py  vercel.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: chat-interface.tsx  sidebar.tsx
scripts/: check_2026_data.py  check_count.py  check_db_tables.py  check_neon.py  crawl_channel.py  create_chat_history.sql  debug_imports.py  download_model.py  evaluate_ragas.py  export_transcripts.py  generate_wisdom_snapshot.py  init_chat_history.py  init_database.py  init_db.py  inspect_db.py  migrate_to_neon.py  process_and_index.py  query_test.py  reprocess_local_data.py  reset_and_run.py  reset_db.py  test_agent.py  test_chat_history.py  test_chat_stream.py  test_full_stack_connection.py  test_pipeline.py  test_search_refactor.py  update_video_table_schema.sql  verify_env.py  verify_fix.py
src/agent/: graph.py  llm.py  nodes.py  state.py
src/agent_workflow/: langgraph_workflow.py  self_reflection_agent.py  state_manager.py  text_to_sql.py
src/api/: server.py
src/core/: cache.py  computation_optimizer.py  config.py  config_manager.py  constants.py  deepseek_client.py  dependency_validator.py  di_container.py  exceptions.py  memory_manager.py  models.py  sql_security.py
src/deepresearch_flow/: __init__.py  scraper.py
src/ingestion/: content_hasher.py  firecrawl_client.py  record_manager.py
tests/: test_grader_hallucination.py  verify_grouping.py
(+31 files in other folders)
